# blog.sanderdelden.nl

./: .yamllint.yml  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
blog/: .authors.yml  .meta.yml  index.md  tags.md
blog/javascripts/: extra.js
blog/overrides/: 404.html
blog/overrides/partials/: comments.html  footer.html
blog/posts/: example.md
